auth api doc final
