# routes/auth.php
@@ -49,10 +49,6 @@ Route::post('/email/verification-notification', [EmailVerificationNotificationCo
                 ->middleware(['throttle:6,1'])
                 ->name('verification.send');
 
-Route::get('/confirm-password', [ConfirmablePasswordController::class, 'show'])
-                ->name('password.confirm');
-
-Route::post('/confirm-password', [ConfirmablePasswordController::class, 'store']);
 
 Route::post('/logout', [AuthenticatedSessionController::class, 'destroy'])
                 ->name('logout');
